--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 
 This is a data package with data on occurrence and abundance records for deliberately introduced dung beetles in Australia. Currently, the data contain `r (dungfaunaR::dungfauna_occurrence |> dplyr::summarise(sum(individualCount, na.rm = TRUE)) |> dplyr::pull() + dungfaunaR::dungfauna_occurrence |>  dplyr::filter(occurrenceStatus == "present" & base::is.na(individualCount)) |>  dplyr::count() |> dplyr::pull()) |> base::format(big.mark = ",")` species identifications from `r dungfaunaR::dungfauna_occurrence |> dplyr::filter(occurrenceStatus == "present") |> dplyr::count() |> dplyr::pull() |> base::format(big.mark = ",")` occurrence records, taken from `r dungfaunaR::dungfauna_event |> dplyr::count() |> dplyr::pull() |> base::format(big.mark = ",")` sampling events at `r dungfaunaR::dungfauna_event |> dplyr::distinct(locationID_site) |> dplyr::count() |> dplyr::pull() |> base::format(big.mark = ",")` locations. The data also contain `r dungfaunaR::dungfauna_occurrence |> dplyr::filter(occurrenceStatus == "absent") |> dplyr::count() |> dplyr::pull() |> base::format(big.mark = ",")` absence records. The data are explained in detail in Berson et al (submitted).
 
-Code used to format the data can be found in the `data-raw folder` in the [dungfaunaR gihub repository](link here). Note that we formatted and performed checks on data from different projects separately (see `data-raw/qld_2001_2010.R`, `data-raw/dafwa_wa_2012_2014.R` and `data-raw/dbee_2019_2022.R`), before combining these data into one dataset (see `data-raw/dungfauna_aus.R`). 
+Code used to format the data can be found in the `data-raw folder` in the [dungfaunaR GitHub repository](link here). Note that we formatted and performed checks on data from different projects separately (see `data-raw/qld_2001_2010.R`, `data-raw/dafwa_wa_2012_2014.R` and `data-raw/dbee_2019_2022.R`), before combining these data into one dataset (see `data-raw/dungfauna_aus.R`). 
 
 Code used to generate the summary statistics, figures and tables in Berson et al (submitted) can by found in the `data-paper` folder within the `data-raw` folder.
 
