--- a/README.Rmd
+++ b/README.Rmd
@@ -18,18 +18,18 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-This is a data package with data on occurrence and abundance records for deliberately introduced dung beetles in Australia. Currently, the data contain `r (dungfaunaR::dungfauna_occurrence |> dplyr::summarise(sum(individualCount, na.rm = TRUE)) |> dplyr::pull() + dungfaunaR::dungfauna_occurrence |>  dplyr::filter(occurrenceStatus == "present" & base::is.na(individualCount)) |>  dplyr::count() |> dplyr::pull()) |> base::format(big.mark = ",")` species identifications from `r dungfaunaR::dungfauna_occurrence |> dplyr::filter(occurrenceStatus == "present") |> dplyr::count() |> dplyr::pull() |> base::format(big.mark = ",")` occurrence records, taken from `r dungfaunaR::dungfauna_event |> dplyr::count() |> dplyr::pull() |> base::format(big.mark = ",")` sampling events at `r dungfaunaR::dungfauna_event |> dplyr::distinct(locationID_site) |> dplyr::count() |> dplyr::pull() |> base::format(big.mark = ",")` locations. The data also contain `r dungfaunaR::dungfauna_occurrence |> dplyr::filter(occurrenceStatus == "absent") |> dplyr::count() |> dplyr::pull() |> base::format(big.mark = ",")` absence records. The data are explained in detail in Berson et al (submitted).
+This is a data package with data on occurrence and abundance records for deliberately introduced dung beetles in Australia. Currently, the data contain `r (dungfaunaR::dungfauna_occurrence |> dplyr::summarise(sum(individualCount, na.rm = TRUE)) |> dplyr::pull() + dungfaunaR::dungfauna_occurrence |>  dplyr::filter(occurrenceStatus == "present" & base::is.na(individualCount)) |>  dplyr::count() |> dplyr::pull()) |> base::format(big.mark = ",")` species identifications from `r dungfaunaR::dungfauna_occurrence |> dplyr::filter(occurrenceStatus == "present") |> dplyr::count() |> dplyr::pull() |> base::format(big.mark = ",")` occurrence records, taken from `r dungfaunaR::dungfauna_event |> dplyr::count() |> dplyr::pull() |> base::format(big.mark = ",")` sampling events at `r dungfaunaR::dungfauna_event |> dplyr::distinct(locationID_site) |> dplyr::count() |> dplyr::pull() |> base::format(big.mark = ",")` locations. The data also contain `r dungfaunaR::dungfauna_occurrence |> dplyr::filter(occurrenceStatus == "absent") |> dplyr::count() |> dplyr::pull() |> base::format(big.mark = ",")` absence records. The data are explained in detail in Berson et al (2024).
 
 Code used to format the data can be found in the `data-raw folder`. Note that we formatted and performed checks on data from different projects separately (see `data-raw/qld_2001_2010.R`, `data-raw/dafwa_wa_2012_2014.R` and `data-raw/dbee_2019_2022.R`), before combining these data into one dataset (see `data-raw/dungfauna_aus.R`). 
 
-Code used to generate the summary statistics, figures and tables in Berson et al (submitted) can by found in the `data-paper` folder within the `data-raw` folder.
+Code used to generate the summary statistics, figures and tables in Berson et al (2024) can by found in the `data-paper` folder within the `data-raw` folder.
 
 The data are provided in both wide (`dungfauna_event`) and long (`dungfauna_occurrence`) format. Running `dungfaunaR::runShinyApp()` will launch a shiny app for visually exploring the data.
 
 
 ## Installation
 
-You can install the development version of dungfaunaR from [GitHub](https://github.com/) with:
+You can install dungfaunaR from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
@@ -55,7 +55,8 @@ After installing and loading the package, you can explore the data with the buil
 
 ## Citation
 
-The paper detailing the data is currently submitted as a data paper. Please check back here for the correct citation to use when using the data.
+Berson, Jacob D., Penelope B. Edwards, T. James Ridsdill-Smith, Christopher K. Taylor, Daniel J. Anderson, Nigel
+R. Andrew, Russell A. Barrow, David A. Cousins, Robert N. Emery, Laura L. Fagan, Rhiannon M. Foster, Lucas G. Harwood, Zac Hemmings, Megan J. Lewis, Sherralee S. Lukehurst, Jake Manger, John N. Matthiessen, Marcela D. C. Vieira, Paul A. Weston, Raphael K. Didham and Theodore A. Evans. 2024. “Deliberately Introduced Dung Beetles in Australia: 12 years of Occurrence and Abundance Records from 2001 to 2022.” Ecology e4328. https:// doi.org/10.1002/ecy.4328
 
 ## Issues
 
